sandbox/output
GildedRose.java:106: error: reached end of file while parsing
}
 ^
1 error
